更新手写wm8960驱动代码

--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -14,6 +14,7 @@ CONFIG_NF_NAT_PROTO_SCTP=y
 CONFIG_HAVE_AOUT=y
 CONFIG_VFP=y
 CONFIG_AEABI=y
+CONFIG_APANIC=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BLK_DEV_DM=y
@@ -29,8 +30,11 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_FB_S3C_NUM_BUF_OVLY_WIN=3
 CONFIG_SERIAL_S5PV210=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_BT_HCIBFUSB=y
 CONFIG_NET_ETHERNET=y
 CONFIG_EXPERIMENTAL=y
+CONFIG_PPP_SYNC_TTY=y
+CONFIG_ANDROID_PMEM_MEMSIZE_PMEM=8192
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_UNWIND=y
 CONFIG_HID_ROCCAT_KOVAPLUS=y
@@ -57,6 +61,8 @@ CONFIG_RT_GROUP_SCHED=y
 CONFIG_HID_EMS_FF=y
 CONFIG_KTIME_SCALAR=y
 CONFIG_IP6_NF_MANGLE=y
+CONFIG_BT_MRVL_SDIO=y
+CONFIG_BT_HCIBPA10X=y
 CONFIG_S3C2410_WATCHDOG=y
 CONFIG_IPV6=y
 CONFIG_USB_SERIAL_QUALCOMM=y
@@ -66,6 +72,7 @@ CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_USB_DEVICEFS=y
 CONFIG_NF_NAT_PROTO_GRE=y
+CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_S3C_GPIO_CFG_S3C24XX=y
@@ -99,7 +106,6 @@ CONFIG_HID_ROCCAT_KONEPLUS=y
 CONFIG_HDMI_HPD=y
 CONFIG_BRANCH_PROFILE_NONE=y
 CONFIG_CRC_ITU_T=y
-CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_IP6_NF_TARGET_LOG=y
 CONFIG_PVR_NEED_PVR_DPF=y
 CONFIG_IP_NF_ARPTABLES=y
@@ -129,16 +135,15 @@ CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_MTD_NAND_IDS=y
 CONFIG_NET_CLS_U32=y
-CONFIG_SND_MIXER_OSS=y
 CONFIG_SERIO=y
 CONFIG_SUNRPC_GSS=y
 CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS=y
 CONFIG_RTC_INTF_SYSFS=y
 CONFIG_NET_EMATCH_U32=y
 CONFIG_BLK_DEV_INITRD=y
+CONFIG_BT_ATH3K=y
 CONFIG_S5PV210_SETUP_FIMC2=y
 CONFIG_NF_CONNTRACK_SANE=y
-CONFIG_SND_OSSEMUL=y
 CONFIG_USB_SERIAL_MOS7720=y
 CONFIG_NF_CT_PROTO_DCCP=y
 CONFIG_ZLIB_INFLATE=y
@@ -158,7 +163,7 @@ CONFIG_S3C_DEV_I2C2=y
 CONFIG_MTD_NAND_S3C_HWECC=y
 CONFIG_USB_DEVICE_CLASS=y
 CONFIG_LOCKD=y
-CONFIG_SOUND_OSS_CORE=y
+CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ARM=y
 CONFIG_ARM_L1_CACHE_SHIFT=6
 CONFIG_USB_EZUSB=y
@@ -194,7 +199,6 @@ CONFIG_SWITCH=y
 CONFIG_DEVKMEM=y
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
 CONFIG_PPP_DEFLATE=y
-CONFIG_NTFS_RW=y
 CONFIG_MINI210_ADC=y
 CONFIG_TEXTSEARCH_KMP=y
 CONFIG_VT=y
@@ -234,10 +238,8 @@ CONFIG_TEXTSEARCH_BM=y
 CONFIG_BT_HCIUART_LL=y
 CONFIG_HID_ZYDACRON=y
 CONFIG_PPP_MPPE=y
-CONFIG_SND_PCM_OSS=y
 CONFIG_S5P_DEV_MFC=y
 CONFIG_RFKILL=y
-CONFIG_VIDEO_TVP5150=y
 CONFIG_NETDEVICES=y
 CONFIG_NET_KEY=y
 CONFIG_IOSCHED_DEADLINE=y
@@ -262,7 +264,9 @@ CONFIG_PVR_PERCONTEXT_PB=y
 CONFIG_NF_NAT_PROTO_DCCP=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 CONFIG_USB_SERIAL_CH341=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
+CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
 CONFIG_GREENASIA_FF=y
 CONFIG_PHONET=y
 CONFIG_SCSI_WAIT_SCAN=m
@@ -277,6 +281,7 @@ CONFIG_NETFILTER_ADVANCED=y
 CONFIG_CRYPTO_DEFLATE=y
 CONFIG_USB_SERIAL_KLSI=y
 CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_BT_HCIBTSDIO=y
 CONFIG_VIDEO_FIMC=y
 CONFIG_NETFILTER_NETLINK_LOG=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
@@ -354,6 +359,7 @@ CONFIG_USB_SERIAL_OPTICON=y
 CONFIG_HID_ROCCAT_COMMON=y
 CONFIG_NET_ACT_GACT=y
 CONFIG_HID_GYRATION=y
+CONFIG_BT_HCIBCM203X=y
 CONFIG_HDMI_CEC=y
 CONFIG_USB_SERIAL_KOBIL_SCT=y
 CONFIG_NETFILTER_XT_TARGET_TPROXY=y
@@ -367,7 +373,6 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_TMPFS=y
 CONFIG_ANON_INODES=y
-CONFIG_NLS_CODEPAGE_936=y
 CONFIG_FUTEX=y
 CONFIG_IP_PNP_DHCP=y
 CONFIG_USB_SERIAL_ZIO=y
@@ -375,6 +380,7 @@ CONFIG_VMSPLIT_3G=y
 CONFIG_RTC_HCTOSYS=y
 CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_USB_HID=y
+CONFIG_ANDROID=y
 CONFIG_SLUB_DEBUG=y
 CONFIG_USB_SERIAL_AIRCABLE=y
 CONFIG_NET_SCH_INGRESS=y
@@ -384,6 +390,7 @@ CONFIG_USB_SERIAL_FUNSOFT=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_SYSVIPC=y
 CONFIG_CRYPTO_PCOMP2=y
+CONFIG_KEYBOARD_GPIO=y
 CONFIG_NF_CONNTRACK_FTP=y
 CONFIG_S5PV210_SETUP_IDE=y
 CONFIG_MODULES=y
@@ -408,6 +415,7 @@ CONFIG_CRYPTO_ALGAPI=y
 CONFIG_GPIO_PLAT_SAMSUNG=y
 CONFIG_MEDIA_TUNER=y
 CONFIG_MISC_DEVICES=y
+CONFIG_INPUT_UINPUT=y
 CONFIG_KEYBOARD_ATKBD=y
 CONFIG_MTD_CFI_I1=y
 CONFIG_NF_NAT=y
@@ -419,8 +427,8 @@ CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_EFI_PARTITION=y
 CONFIG_LOG_BUF_SHIFT=17
-CONFIG_SOUND_OSS_CORE_PRECLAIM=y
 CONFIG_EXTRA_FIRMWARE=""
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_VIRT_TO_BUS=y
 CONFIG_VFAT_FS=y
 CONFIG_S3C_GPIO_CFG_S3C64XX=y
@@ -435,6 +443,7 @@ CONFIG_NF_NAT_IRC=y
 CONFIG_MEDIA_TUNER_CUSTOMISE=y
 CONFIG_USB_EHCI_S5P=y
 CONFIG_PLAT_SAMSUNG=y
+CONFIG_INPUT_MISC=y
 CONFIG_CPU_PABRT_V7=y
 CONFIG_SUSPEND=y
 CONFIG_MTD_NAND_ECC=y
@@ -462,10 +471,12 @@ CONFIG_S3C_DEV_I2C1=y
 CONFIG_XZ_DEC_BCJ=y
 CONFIG_PM_SLEEP=y
 CONFIG_I2C=y
+CONFIG_PPP_MULTILINK=y
 CONFIG_BT_HIDP=y
 CONFIG_CPU_ABRT_EV7=y
 CONFIG_VM_EVENT_COUNTERS=y
 CONFIG_CRYPTO_ECB=y
+CONFIG_BT_HCIUART_ATH3K=y
 CONFIG_NF_CONNTRACK_AMANDA=y
 CONFIG_ARM_THUMBEE=y
 CONFIG_USB_SERIAL_EDGEPORT=y
@@ -501,7 +512,6 @@ CONFIG_CPU_S5PV210=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_NETFILTER_XT_TARGET_TRACE=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_MTD_MAP_BANK_WIDTH_1=y
 CONFIG_APM_EMULATION=y
 CONFIG_USB_SERIAL_CYBERJACK=y
@@ -510,6 +520,7 @@ CONFIG_HAVE_PWM=y
 CONFIG_EPOLL=y
 CONFIG_SND_PCM=y
 CONFIG_PARTITION_ADVANCED=y
+CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_S3C_GPIO_TRACK=y
 CONFIG_USB_SERIAL_EMPEG=y
 CONFIG_YAFFS_XATTR=y
@@ -532,11 +543,13 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_S5PV210_SETUP_FIMC0=y
 CONFIG_INET=y
 CONFIG_IP_PNP_BOOTP=y
+CONFIG_S5P_HIGH_RES_TIMERS=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_SPI_S3C64XX=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_FREEZER=y
 CONFIG_BT=y
+CONFIG_BT_HCIVHCI=y
 CONFIG_RFKILL_PM=y
 CONFIG_MINI210_LEDS=y
 CONFIG_NET_CLS_ACT=y
@@ -567,6 +580,7 @@ CONFIG_USB_SERIAL_SAFE_PADDED=y
 CONFIG_SND_DRIVERS=y
 CONFIG_USB_SERIAL_BELKIN=y
 CONFIG_LOCKDEP_SUPPORT=y
+CONFIG_ANDROID_PMEM_MEMSIZE_PMEM_GPU1=3072
 CONFIG_SERIAL_SAMSUNG_UARTS=4
 CONFIG_NO_HZ=y
 CONFIG_RTC_INTF_ALARM=y
@@ -578,7 +592,6 @@ CONFIG_MTD_BLKDEVS=y
 CONFIG_VIDEO_CAPTURE_DRIVERS=y
 CONFIG_ARCH_S5PV210=y
 CONFIG_DEBUG_SPINLOCK=y
-CONFIG_SND_PCM_OSS_PLUGINS=y
 CONFIG_INET6_ESP=y
 CONFIG_SYSCTL_SYSCALL=y
 CONFIG_I2C_S3C2410=y
@@ -590,7 +603,6 @@ CONFIG_SERIO_LIBPS2=y
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_PAGE_OFFSET=0xC0000000
-CONFIG_FONT_8x8=y
 CONFIG_DEBUG_SPINLOCK_SLEEP=y
 CONFIG_MINI210_BACKLIGHT=y
 CONFIG_USB_SERIAL_IR=y
@@ -606,6 +618,7 @@ CONFIG_NETFILTER_XT_MATCH_MAC=y
 CONFIG_NEED_PER_CPU_KM=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_KALLSYMS_ALL=y
+CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_LIBCRC32C=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
@@ -619,6 +632,7 @@ CONFIG_USB_SERIAL_CYPRESS_M8=y
 CONFIG_HID_EZKEY=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_SAMSUNG_CLKSRC=y
+CONFIG_BT_MRVL=y
 CONFIG_SAMSUNG_DEV_IDE=y
 CONFIG_NEON=y
 CONFIG_GENERIC_ACL=y
@@ -627,11 +641,13 @@ CONFIG_FB_S3C=y
 CONFIG_COMPAT_BRK=y
 CONFIG_LOCALVERSION="-FriendlyARM"
 CONFIG_RADIO_ADAPTERS=y
+CONFIG_MACH_NO_WESTBRIDGE=y
 CONFIG_CRYPTO=y
 CONFIG_SCHED_DEBUG=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_CMDLINE="root=/dev/mtdblock4 rootfstype=yaffs2 init=/linuxrc console=ttySAC0,115200 androidboot.console=ttySAC0 lcd=S70"
+CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_HAVE_DMA_API_DEBUG=y
 CONFIG_HID_SAMSUNG=y
 CONFIG_USB_ARCH_HAS_HCD=y
@@ -654,6 +670,7 @@ CONFIG_SAMSUNG_IRQ_UART=y
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_VIDEO_DEV=y
 CONFIG_NFS_V4=y
+CONFIG_PPP_FILTER=y
 CONFIG_HAS_DMA=y
 CONFIG_NF_CT_PROTO_SCTP=y
 CONFIG_USB_SERIAL_VISOR=y
@@ -665,9 +682,9 @@ CONFIG_SAMSUNG_GPIO_EXTRA=0
 CONFIG_HID_CHICONY=y
 CONFIG_HID=y
 CONFIG_LOGIWII_FF=y
-CONFIG_FONT_8x16=y
 CONFIG_JBD2=y
 CONFIG_INET6_IPCOMP=y
+CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_PHYLIB=y
 CONFIG_IPV6_TUNNEL=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -675,6 +692,7 @@ CONFIG_LOCALVERSION_AUTO=y
 CONFIG_MISC_FILESYSTEMS=y
 CONFIG_FTRACE=y
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
+CONFIG_HRT_RTC=y
 CONFIG_IP_NF_RAW=y
 CONFIG_IP_NF_ARPFILTER=y
 CONFIG_ARM_L1_CACHE_SHIFT_6=y
@@ -712,9 +730,10 @@ CONFIG_EXPERT=y
 CONFIG_VIDEO_OV9650=y
 CONFIG_WIRELESS=y
 CONFIG_WEXT_PROC=y
+CONFIG_BT_HCIBTUSB=y
 CONFIG_PERF_USE_VMALLOC=y
 CONFIG_S5PV210_SETUP_SDHCI_GPIO=y
-CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_FRAME_WARN=1024
 CONFIG_RCU_CPU_STALL_VERBOSE=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -725,12 +744,13 @@ CONFIG_MMC=y
 CONFIG_HID_LOGITECH=y
 CONFIG_STACKTRACE=y
 CONFIG_PPPOLAC=y
+CONFIG_APANIC_PLABEL="kpanic"
 CONFIG_TOUCHSCREEN_IF=y
 CONFIG_IFB=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_USB_SERIAL_OTI6858=y
 CONFIG_FB_EARLYSUSPEND=y
-CONFIG_HZ=200
+CONFIG_HZ=256
 CONFIG_I2C_HELPER_AUTO=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 CONFIG_PVR_ACTIVE_POWER_MANAGEMENT=y
@@ -793,12 +813,12 @@ CONFIG_CGROUP_DEBUG=y
 CONFIG_USB_SERIAL_KEYSPAN_PDA=y
 CONFIG_WIRELESS_EXT=y
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
+CONFIG_ANDROID_LOGGER=y
 CONFIG_HW_RANDOM=y
 CONFIG_RWSEM_GENERIC_SPINLOCK=y
 CONFIG_DEBUG_S3C_UART=0
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_S5PV210_POWER_DOMAIN=y
-CONFIG_NTFS_FS=y
 CONFIG_PVR_NEED_PVR_ASSERT=y
 CONFIG_VIDEO_MFC50=y
 CONFIG_BASE_SMALL=0
@@ -819,6 +839,7 @@ CONFIG_RFKILL_INPUT=y
 CONFIG_INITRAMFS_COMPRESSION_NONE=y
 CONFIG_USB_SERIAL_QCAUX=y
 CONFIG_NFS_USE_KERNEL_DNS=y
+CONFIG_HID_TIMELINK=y
 CONFIG_SYSCTL=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
 CONFIG_VIDEO_G2D=y
@@ -837,7 +858,7 @@ CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
 CONFIG_HID_ELECOM=y
 CONFIG_SND_TIMER=y
 CONFIG_USB_EHCI_TT_NEWSCHED=y
-CONFIG_FAT_DEFAULT_CODEPAGE=936
+CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_BLK_DEV=y
 CONFIG_USB_SERIAL_MOTOROLA=y
 CONFIG_USB_SERIAL_OMNINET=y
@@ -846,7 +867,6 @@ CONFIG_UNIX98_PTYS=y
 CONFIG_SND_SOC_WM8960_MINI210=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_CRYPTO_MICHAEL_MIC=y
-CONFIG_HAVE_SCHED_CLOCK=y
 CONFIG_CRYPTO_ANSI_CPRNG=m
 CONFIG_NET_SCHED=y
 CONFIG_PRINTK_TIME=y
@@ -866,13 +886,13 @@ CONFIG_INPUT_POLLDEV=y
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
 CONFIG_PL330=y
 CONFIG_S5P_SETUP_MFC=y
+CONFIG_STAGING=y
 CONFIG_MTD_CHAR=y
 CONFIG_VT_CONSOLE=y
 CONFIG_HID_UCLOGIC=y
 CONFIG_PVR_SGX=y
 CONFIG_SMARTJOYPLUS_FF=y
 CONFIG_ARM_VIC_NR=4
-CONFIG_FPE_NWFPE=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_LOGIRUMBLEPAD2_FF=y
@@ -891,14 +911,13 @@ CONFIG_USB_SERIAL_ARK3116=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_S5PV210_SETUP_CSIS=y
 CONFIG_CROSS_COMPILE="arm-linux-"
-CONFIG_MINI210_BUTTONS=y
 CONFIG_USB_GADGET_SELECTED=y
 CONFIG_USB_SERIAL_SSU100=y
 CONFIG_XZ_DEC_ARMTHUMB=y
-CONFIG_NLS_UTF8=y
 CONFIG_NETFILTER_TPROXY=y
 CONFIG_USB_USBNET=y
 CONFIG_SCSI_MULTI_LUN=y
+CONFIG_ANDROID_PMEM_MEMSIZE_PMEM_ADSP=6144
 CONFIG_USB_SERIAL_PL2303=y
 CONFIG_NET_ACT_POLICE=y
 CONFIG_HID_SMARTJOYPLUS=y
@@ -906,10 +925,12 @@ CONFIG_TOUCHSCREEN_GOODIX=y
 CONFIG_NEW_LEDS=y
 CONFIG_VIDEO_FIMC_RANGE_NARROW=y
 CONFIG_CRC_CCITT=y
+CONFIG_ANDROID_PMEM=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 CONFIG_NETFILTER_NETLINK=y
 CONFIG_MODULE_UNLOAD=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_AVERAGE=y
 CONFIG_SAMSUNG_GPIOLIB_4BIT=y
 CONFIG_RCU_FANOUT=32
@@ -940,6 +961,7 @@ CONFIG_LOCKUP_DETECTOR=y
 CONFIG_NET_ACTIVITY_STATS=y
 CONFIG_NLS_DEFAULT="iso8859-1"
 CONFIG_NF_CT_PROTO_GRE=y
+CONFIG_BT_HCIUART_BCSP=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_HAVE_S3C2410_I2C=y
 CONFIG_CRYPTO_AEAD2=y
