--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -13,6 +13,8 @@ CONFIG_HID_ROCCAT_PYRA=Y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=Y
 CONFIG_SERIAL_S5PV210=Y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=Y
+CONFIG_BT_HCIBFUSB=Y
+CONFIG_PPP_SYNC_TTY=Y
 CONFIG_HID_ROCCAT_KOVAPLUS=Y
 CONFIG_USB_SERIAL_NAVMAN=Y
 CONFIG_BINFMT_MISC=Y
@@ -25,6 +27,8 @@ CONFIG_USB_SERIAL_FTDI_SIO=Y
 CONFIG_HID_ACRUX_FF=Y
 CONFIG_HID_EMS_FF=Y
 CONFIG_IP6_NF_MANGLE=Y
+CONFIG_BT_MRVL_SDIO=Y
+CONFIG_BT_HCIBPA10X=Y
 CONFIG_S3C2410_WATCHDOG=Y
 CONFIG_IPV6=Y
 CONFIG_USB_SERIAL_QUALCOMM=Y
@@ -46,7 +50,6 @@ CONFIG_USB=Y
 CONFIG_CRYPTO_HMAC=Y
 CONFIG_HID_ROCCAT_KONEPLUS=Y
 CONFIG_CRC_ITU_T=Y
-CONFIG_FRAMEBUFFER_CONSOLE=Y
 CONFIG_IP6_NF_TARGET_LOG=Y
 CONFIG_IP_NF_ARPTABLES=Y
 CONFIG_HID_CHERRY=Y
@@ -62,10 +65,10 @@ CONFIG_CRYPTO_DES=Y
 CONFIG_NLS_CODEPAGE_437=Y
 CONFIG_MTD_NAND_IDS=Y
 CONFIG_NET_CLS_U32=Y
-CONFIG_SND_MIXER_OSS=Y
 CONFIG_SERIO=Y
 CONFIG_SUNRPC_GSS=Y
 CONFIG_NET_EMATCH_U32=Y
+CONFIG_BT_ATH3K=Y
 CONFIG_NF_CONNTRACK_SANE=Y
 CONFIG_USB_SERIAL_MOS7720=Y
 CONFIG_NF_CT_PROTO_DCCP=Y
@@ -75,6 +78,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=Y
 CONFIG_USB_VIDEO_CLASS=Y
 CONFIG_USB_SERIAL_TI=Y
 CONFIG_LOCKD=Y
+CONFIG_ANDROID_TIMED_GPIO=Y
 CONFIG_NETFILTER_XT_MATCH_STRING=Y
 CONFIG_IP_NF_TARGET_LOG=Y
 CONFIG_USB_STORAGE=Y
@@ -110,9 +114,7 @@ CONFIG_CPU_FREQ_TABLE=Y
 CONFIG_TEXTSEARCH_BM=Y
 CONFIG_HID_ZYDACRON=Y
 CONFIG_PPP_MPPE=Y
-CONFIG_SND_PCM_OSS=Y
 CONFIG_RFKILL=Y
-CONFIG_VIDEO_TVP5150=Y
 CONFIG_NET_KEY=Y
 CONFIG_IOSCHED_DEADLINE=Y
 CONFIG_IPV6_SIT=Y
@@ -128,6 +130,7 @@ CONFIG_NF_DEFRAG_IPV4=Y
 CONFIG_HID_LCPOWER=Y
 CONFIG_CRYPTO_DEFLATE=Y
 CONFIG_USB_SERIAL_KLSI=Y
+CONFIG_BT_HCIBTSDIO=Y
 CONFIG_NETFILTER_NETLINK_LOG=Y
 CONFIG_NETFILTER_XT_MATCH_MARK=Y
 CONFIG_IP_NF_MANGLE=Y
@@ -163,16 +166,17 @@ CONFIG_USB_SERIAL_OPTICON=Y
 CONFIG_HID_ROCCAT_COMMON=Y
 CONFIG_NET_ACT_GACT=Y
 CONFIG_HID_GYRATION=Y
+CONFIG_BT_HCIBCM203X=Y
 CONFIG_USB_SERIAL_KOBIL_SCT=Y
 CONFIG_NETFILTER_XT_TARGET_TPROXY=Y
 CONFIG_CRC16=Y
-CONFIG_NLS_CODEPAGE_936=Y
 CONFIG_USB_SERIAL_ZIO=Y
 CONFIG_USB_HID=Y
 CONFIG_USB_SERIAL_AIRCABLE=Y
 CONFIG_NET_SCH_INGRESS=Y
 CONFIG_USB_SERIAL_FUNSOFT=Y
 CONFIG_CRYPTO_PCOMP2=Y
+CONFIG_KEYBOARD_GPIO=Y
 CONFIG_NF_CONNTRACK_FTP=Y
 CONFIG_IP_NF_MATCH_ECN=Y
 CONFIG_USB_GADGET=Y
@@ -186,10 +190,12 @@ CONFIG_HID_QUANTA=Y
 CONFIG_NF_CONNTRACK_IPV6=Y
 CONFIG_CRYPTO_ALGAPI=Y
 CONFIG_MEDIA_TUNER=Y
+CONFIG_INPUT_UINPUT=Y
 CONFIG_KEYBOARD_ATKBD=Y
 CONFIG_NF_NAT=Y
 CONFIG_USB_SERIAL_XIRCOM=Y
 CONFIG_CRYPTO_HASH=Y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=Y
 CONFIG_VFAT_FS=Y
 CONFIG_BLK_DEV_LOOP=Y
 CONFIG_SYSV_FS=Y
@@ -233,6 +239,7 @@ CONFIG_NF_CONNTRACK_TFTP=Y
 CONFIG_SPI_S3C64XX=Y
 CONFIG_CRYPTO_TWOFISH=Y
 CONFIG_BT=Y
+CONFIG_BT_HCIVHCI=Y
 CONFIG_MINI210_LEDS=Y
 CONFIG_HID_WACOM=Y
 CONFIG_USB_SERIAL_CP210X=Y
@@ -264,6 +271,7 @@ CONFIG_HID_SONY=Y
 CONFIG_HID_MONTEREY=Y
 CONFIG_USB_SERIAL_CYPRESS_M8=Y
 CONFIG_HID_EZKEY=Y
+CONFIG_BT_MRVL=Y
 CONFIG_FB_S3C=Y
 CONFIG_CRYPTO=Y
 CONFIG_IP_NF_IPTABLES=Y
@@ -312,6 +320,7 @@ CONFIG_NETFILTER_XT_TARGET_MARK=Y
 CONFIG_I2C_ALGOBIT=Y
 CONFIG_MMC_BLOCK=Y
 CONFIG_VIDEO_OV9650=Y
+CONFIG_BT_HCIBTUSB=Y
 CONFIG_TOUCHSCREEN_1WIRE=Y
 CONFIG_MMC=Y
 CONFIG_HID_LOGITECH=Y
@@ -339,8 +348,8 @@ CONFIG_TOUCHSCREEN_FT5X0X=Y
 CONFIG_NF_NAT_PROTO_UDPLITE=Y
 CONFIG_USB_SERIAL_SIERRAWIRELESS=Y
 CONFIG_USB_SERIAL_KEYSPAN_PDA=Y
+CONFIG_ANDROID_LOGGER=Y
 CONFIG_HW_RANDOM=Y
-CONFIG_NTFS_FS=Y
 CONFIG_CRYPTO_BLKCIPHER2=Y
 CONFIG_USB_SERIAL_SIEMENS_MPI=Y
 CONFIG_MTD_BLOCK=Y
@@ -348,6 +357,7 @@ CONFIG_SENSORS_MMA7660=Y
 CONFIG_HID_PANTHERLORD=Y
 CONFIG_SND=Y
 CONFIG_USB_SERIAL_QCAUX=Y
+CONFIG_HID_TIMELINK=Y
 CONFIG_SND_S5PC1XX_I2S=Y
 CONFIG_PPP_ASYNC=Y
 CONFIG_CRAMFS=Y
@@ -381,9 +391,7 @@ CONFIG_HID_NTRIG=Y
 CONFIG_DECOMPRESS_GZIP=Y
 CONFIG_USB_SERIAL_ARK3116=Y
 CONFIG_I2C_CHARDEV=Y
-CONFIG_MINI210_BUTTONS=Y
 CONFIG_USB_SERIAL_SSU100=Y
-CONFIG_NLS_UTF8=Y
 CONFIG_NETFILTER_TPROXY=Y
 CONFIG_USB_USBNET=Y
 CONFIG_USB_SERIAL_PL2303=Y
