--- a/.config
+++ b/.config
@@ -2106,10 +2106,10 @@ CONFIG_SND_USB=y
 CONFIG_SND_SOC=y
 # CONFIG_SND_SOC_CACHE_LZO is not set
 # CONFIG_SND_SOC_SAMSUNG is not set
-# CONFIG_S5P_INTERNAL_DMA is not set
 CONFIG_SND_S5PV2XX_SOC=y
 CONFIG_SND_S5PC1XX_I2S=y
-CONFIG_SND_SOC_WM8960_MINI210=y
+CONFIG_SND_MINI210_WM8960=y
+CONFIG_SND_WM8960=y
 CONFIG_SND_S5PV2XX_SOC_WM8960=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
