调试声卡wm8960，设备总线驱动模型都已匹配成功

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,16 @@ modules.builtin
 *.patch
 *.gcno
 
+arch/arm/boot/Image
+arch/arm/boot/compressed/piggy.gzip
+arch/arm/boot/compressed/vmlinux
+arch/arm/boot/zImage
+include/config/auto.conf
+include/config/kernel.release
+include/config/tristate.conf
+include/generated/autoconf.h
+include/generated/utsrelease.h
+
 #
 # Top-level generic files
 #
