--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -303,6 +303,7 @@ CONFIG_NETFILTER_XT_MATCH_SOCKET=Y
 CONFIG_HID_TOPSEED=Y
 CONFIG_NF_NAT_H323=Y
 CONFIG_HID_A4TECH=Y
+CONFIG_SND_MINI210_WM8960=Y
 CONFIG_IP_NF_TARGET_NETMAP=Y
 CONFIG_INPUT_FF_MEMLESS=Y
 CONFIG_CHR_DEV_SG=Y
@@ -367,7 +368,6 @@ CONFIG_HID_ELECOM=Y
 CONFIG_SND_TIMER=Y
 CONFIG_USB_SERIAL_MOTOROLA=Y
 CONFIG_USB_SERIAL_OMNINET=Y
-CONFIG_SND_SOC_WM8960_MINI210=Y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=Y
 CONFIG_CRYPTO_MICHAEL_MIC=Y
 CONFIG_CRYPTO_ANSI_CPRNG=M
@@ -407,6 +407,7 @@ CONFIG_VIDEO_V4L2_COMMON=Y
 CONFIG_CRYPTO_BLKCIPHER=Y
 CONFIG_NF_CONNTRACK=Y
 CONFIG_LCD_CLASS_DEVICE=Y
+CONFIG_SND_WM8960=Y
 CONFIG_SND_SOC_I2C_AND_SPI=Y
 CONFIG_HID_ROCCAT_ARVO=Y
 CONFIG_IP_NF_TARGET_REJECT=Y
