--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -701,6 +701,7 @@ CONFIG_HID_TOPSEED=y
 CONFIG_NF_NAT_H323=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
 CONFIG_HID_A4TECH=y
+CONFIG_SND_MINI210_WM8960=y
 CONFIG_IP_NF_TARGET_NETMAP=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_FB_S3C_MINI210=y
@@ -864,7 +865,6 @@ CONFIG_USB_SERIAL_MOTOROLA=y
 CONFIG_USB_SERIAL_OMNINET=y
 CONFIG_TRACING_SUPPORT=y
 CONFIG_UNIX98_PTYS=y
-CONFIG_SND_SOC_WM8960_MINI210=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_CRYPTO_MICHAEL_MIC=y
 CONFIG_CRYPTO_ANSI_CPRNG=m
@@ -944,6 +944,7 @@ CONFIG_NF_CONNTRACK=y
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_FILE_LOCKING=y
 CONFIG_S3C_DEV_WDT=y
+CONFIG_SND_WM8960=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_HID_ROCCAT_ARVO=y
 CONFIG_NET_EMATCH=y
