--- a/.gitignore
+++ b/.gitignore
@@ -32,15 +32,15 @@ modules.builtin
 *.patch
 *.gcno
 
-arch/arm/boot/Image
-arch/arm/boot/compressed/piggy.gzip
-arch/arm/boot/compressed/vmlinux
-arch/arm/boot/zImage
-include/config/auto.conf
-include/config/kernel.release
-include/config/tristate.conf
-include/generated/autoconf.h
-include/generated/utsrelease.h
+./arch/arm/boot/Image
+./arch/arm/boot/compressed/piggy.gzip
+./arch/arm/boot/compressed/vmlinux
+./arch/arm/boot/zImage
+./include/config/auto.conf
+./include/config/kernel.release
+./include/config/tristate.conf
+./include/generated/autoconf.h
+./include/generated/utsrelease.h
 
 #
 # Top-level generic files
@@ -57,8 +57,6 @@ include/generated/utsrelease.h
 #
 # git files that we don't want to ignore even it they are dot-files
 #
-!.gitignore
-!.mailmap
 
 #
 # Generated include files
